force-app/main/default/objects/Order__c/fields/Store_Front__c.field-meta.xml
<CustomField>
    <fullName>Store_Front__c</fullName>
    <label>Store Front</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cosori</fullName>
            </value>
            <value>
                <fullName>Etekcity</fullName>
            </value>
            <value>
                <fullName>Levoit</fullName>
            </value>
            <value>
                <fullName>Pawsync</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>