force-app/main/default/objects/Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>External_System_Id__c</columns>
    <columns>Order_Status__c</columns>
    <columns>Store_Front__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>